--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,3 +7,9 @@ data_ingestion:
   unzip_dir: artifacts/data_ingestion
   source_csv: artifacts\\data_ingestion\\Fecal_data.csv
 
+
+prepare_base_model:
+  root_dir: artifacts/prepare_base_model
+  base_model_path: artifacts/prepare_base_model/base_model.h5
+  updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
+  class_indices_path: artifacts/prepare_base_model/class_indices.json
